# evo_ik

./: CITATION.cff  LICENSE  README.md  pyproject.toml
src/evo_ik/: __init__.py  evo_ik.py  metrics.py
tests/evo_ik/: nico_left_arm.urdf  test_evo_ik.py
