[build-system]
requires = [
	"hatchling", 
]
build-backend = "hatchling.build"
[tool.hatch.metadata]
allow-direct-references = true
[project]
name = "evo_ik"
version = "0.0.2"
authors = [
  { name="Connor Gäde", email="connor.gaede@uni-hamburg.de" },
]
description = "Evolutionary inverse kinematics solver combining EvoTorch and PyTorch Robot Kinematics"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
	"evotorch",
	"numpy",
	"pytorch-kinematics @ git+https://github.com/UM-ARM-Lab/pytorch_kinematics@31f14227971a8b7a2e697f3f5444acfd1a64c628",
	"torch" 
]
[project.optional-dependencies]
tests = [
	"pytest",
	"pytest-repeat",
]
