[build-system]
requires = [
	"hatchling", 
]
build-backend = "hatchling.build"
[project]
name = "evo_ik"
version = "0.1.0"
authors = [
  { name="Connor Gäde", email="connor.gaede@uni-hamburg.de" },
]
description = "Evolutionary inverse kinematics solver combining EvoTorch and PyTorch Robot Kinematics"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
	"evotorch",
	"numpy",
	"pytorch-kinematics",
	"torch" 
]
[project.optional-dependencies]
tests = [
	"pytest",
	"pytest-repeat",
]
